Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-117428

[Reg 6.4->6.5] QWizard does not draw the buttons

XMLWordPrintable

    • Windows
    • 58a6a92f6 (dev), d490f3d9f (6.6), e0f6ab50a (tqtc/lts-6.5)

      Reproducible with the trivial wizard example. You need to resize to see the buttons. If you move the widget with mouse, the buttons gets clipped again.

      Tested with tagged 6.5.3 and 6.5 commit 6bebbf3c5b12cda522e100915c2f0ea4c023e449

        For Gerrit Dashboard: QTBUG-117428
        # Subject Branch Project Status CR V

            santhoshkumar Santhosh Kumar Selvaraj
            kamartti Katja Marttila
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes